[gd_scene load_steps=2 format=3 uid="uid://rg0jj4cwyv6w"]

[ext_resource type="Script" uid="uid://5xlvd25ammcp" path="res://scripts/build_card.gd" id="1_1ny6r"]

[node name="build_card" type="Node2D"]
script = ExtResource("1_1ny6r")

[node name="card_base" type="Sprite2D" parent="."]

[node name="card_suit" type="Sprite2D" parent="."]

[node name="card_number" type="Sprite2D" parent="."]
